[package]
name = "rust-todo-list"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console = "0.15.8"
dialoguer = "0.11.0"
lazy_static = "1.4.0"
rusqlite = {version = "0.31.0", features = ["bundled"]}
